--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "webpack",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack --mode development & cd theme && theme open && theme deploy && theme watch",
@@ -26,5 +25,9 @@
     "webpack-cli": "^4.3.1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "jquery": "^3.5.1"
+  }
 }
